--- a/gleam.toml
+++ b/gleam.toml
@@ -1,16 +1,13 @@
 name = "gpsd_json"
 version = "1.0.0"
-
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "", repo = "" }
-# links = [{ title = "Website", href = "" }]
-#
-# For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/.
+licences = ["Apache-2.0"]
+description = "Types and functions for working with GPSD's JSON API"
+repository = { type = "github", user = "lpil", repo = "gpsd-json" }
+links = [
+  { title = "Sponsor", href = "https://github.com/sponsors/lpil" },
+  { title = "GPSD", href = "https://gpsd.io/index.html" },
+  { title = "GPSD JSON", href = "https://gpsd.io/gpsd_json.html" },
+]
 
 target="javascript"
 
